# mzdata

./: .cliffignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  Makefile  README.md  cliff.toml  pipeconvert.sh
.github/helpers/: vcpkg.json
.github/workflows/: release-pymzdata.yml  test-static.yaml  test.yaml
benches/: mzml.rs  peak_set.rs
crates/mzdata-spectra/: Cargo.toml  README.md
crates/mzdata-spectra/src/: lib.rs
crates/mzdata-wasm/: Cargo.toml  Justfile
crates/mzdata-wasm/mzdata_ts/: package-lock.json  package.json  tsconfig.json  vite.config.js
crates/mzdata-wasm/mzdata_ts/src/: index.ts  io_tools.ts  mem_reader.ts  mem_writer.ts
crates/mzdata-wasm/src/: asyncio.rs  binds.rs  blobio.rs  lib.rs  mem_reader.rs  mem_writer.rs  utils.rs
crates/pymzdata/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/pymzdata/src/: lib.rs  meta.rs  params.rs  reader.rs  spectrum.rs
crates/pymzdata/tests/: conftest.py  test_ion_mobility.py  test_metadata.py  test_mgf.py  test_params.py  test_precursor.py  test_pyteomics_parity.py  test_reader.py  test_spectrum.py
cv/: extract_activation.py  extract_component.py  extract_cv_metadata.py  extract_energy.py  extract_file_formats.py  extract_native_ids.py  extract_software.py  requirements.txt
docs/: ion_mobility_tutorial.md  reader_tutorial.md  spectrum_tutorial.md  writer_tutorial.md
docs/img/: to_uri.py
examples/: async_mzcat.rs  averaging_writer.rs  compressed_mzml.rs  describe_instrument.rs  from_stdin.rs  get_chromatogram_by.rs  get_scan_by.rs  infer_format.rs  msn_target_mapping.rs  mzcat.rs  mzconvert.rs  mzinfo.rs  random_access_iter.rs  readme.rs
src/: coordinate.rs  io.rs  lib.rs  main.rs  mass_error.rs  meta.rs  params.rs  peak.rs  peak_set.rs  peaks.rs  prelude.rs  scan.rs  spectrum.rs  tutorial.rs  utils.rs
src/io/: compression.rs  infer_format.rs  mgf.rs  mod.rs  mzml.rs  mzmlb.rs  offset_index.rs  prelude.rs  proxi.rs  shorthand.rs  thermo.rs  traits.rs  usi.rs  utils.rs
src/io/imzml/: README.md  ibd.rs  mod.rs  reader.rs  tests.rs
src/io/infer_format/: dispatch.rs  inference.rs  mod.rs  pipeline.rs
src/io/mgf/: async_reader.rs  mod.rs  reader.rs  writer.rs
src/io/mzml/: async.rs  async_reader.rs  mod.rs  reader.rs  reading_shared.rs  writer.rs
src/io/mzmlb/: common.rs  mod.rs  reader.rs  writer.rs
src/io/tdf/: arrays.rs  constants.rs  mod.rs  reader.rs  sql.rs
src/io/thermo/: async_reader.rs  instruments.rs  mod.rs  reader.rs
src/io/traits/: chromatogram.rs  frame.rs  spectrum.rs  util.rs
src/io/xy/: mod.rs  reader.rs
src/meta/: activation.rs  data_processing.rs  file_description.rs  instrument.rs  run.rs  sample.rs  scan_settings.rs  software.rs  traits.rs
src/peaks/: coordinate.rs  peak.rs  peak_set.rs
src/spectrum/: bindata.rs  chromatogram.rs  frame.rs  group.rs  params.rs  peaks.rs  scan_properties.rs  signal.rs  spectrum.rs  spectrum_types.rs  utils.rs
src/spectrum/bindata/: array.rs  conversion.rs  encodings.rs  map.rs  traits.rs
src/spectrum/group/: flat.rs  frame.rs  mse_iter.rs  spectrum.rs  util.rs
src/spectrum/signal/: bindata.rs  conversion.rs  encodings.rs  map.rs  traits.rs
src/tutorial/: ion_mobility.rs  reading.rs  spectrum.rs  writing.rs
test/data/: diaPASEF.mzML  duplicate.mzML  duplicate.mzMLb  im_f64_zstd_base64.txt  mz_f64_zlib_bas64.txt  proxi_test.json  read_index_of.mzML  small.index.json  small.mgf  small.mzML  small.mzMLb  three_test_scans.mzML
test/data/imaging/: README.md
test/data/tpp/: small.mgf
