[package]
name = "mzdata-spectra"
version = "0.45.0"
edition = "2021"

keywords = ['mass-spectrometry', 'mzml', 'mgf']

categories = ["science", "data-structures"]

[features]

mzsignal = ["mzdata/mzsignal"]
openblas = ["mzdata/openblas"]
netlib = ["mzdata/netlib"]
intel-mkl = ["mzdata/intel-mkl"]
nalgebra = ["mzdata/nalgebra"]

parallelism = ["mzdata/parallelism"]

serde = ["mzdata/serde"]


[dependencies]
mzdata = { path = "../../", default-features = false, features = []}