[package]
name = "mzdata-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.99"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7" }

js-sys = "0.3.76"
web-sys = { version = "0.3.76", features = [
    "Blob",
    "FileReader",
    "Event",
    "EventTarget",
    "HtmlInputElement",
    "FileList",
    "File",
    "FileReaderSync",
    "ReadableStreamDefaultReader",
    "ReadableStream",
] }

mzdata = { path = "../../", version = "0.65.5", default-features = false, features = [
    "mzml",
    "mgf",
    "imzml",
    "mzsignal",
    'nalgebra',
    "serde"
] }

uuid = { version = "1.0", features = ["js"] }

mzpeaks = "1"
mzsignal = { version = ">=1.1.2", default-features = false, features = ["nalgebra", "serde"]}


flate2 = "1.0.35"
wasm-logger = "0.2.0"

log = "0.4.20"
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["sync", "rt", "io-util"] }
bytes = "1.9.0"

wasm-bindgen-futures = "0.4.50"
pin-project = "1.1.8"
tokio-util = { version = "0.7.13", features = ["io-util"] }
serde_json = "1.0.139"
gloo-file = { version = "0.3.0", features = ["futures"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"
opt-level = 3
debug = true


[profile.release.package."mzsignal"]
opt-level = 3

[profile.dev.package."mzsignal"]
opt-level = 3

