[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "pymzdata"
description = "Python bindings for reading mass spectrometry data with mzdata"
readme = "README.md"
# The binding is built abi3-py39, so 3.9 is the real minimum.
requires-python = ">=3.9"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mobiusklein/mzdata"
Repository = "https://github.com/mobiusklein/mzdata"
Issues = "https://github.com/mobiusklein/mzdata/issues"

[project.optional-dependencies]
# `pip install pymzdata[test]` to run the Python test suite. numpy is needed to use the returned peak
# arrays; pyteomics (+ its lxml / psims deps) powers the parity cross-check that validates pymzdata's
# output against an independent mzML reader.
test = ["pytest>=7", "numpy>=1.21", "pyteomics>=4.6", "lxml>=4.9", "psims>=1.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
